# linksync

./: README.md  pyproject.toml
src/linksnip/: __init__.py  client.py  exceptions.py
src/linksync/: __init__.py
